# m65-field-jacket

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  crypto.rs  dek.rs  error.rs  identity.rs  io.rs  keyring.rs  main.rs  paths.rs  pocket.rs  secret.rs  stanza.rs  storage.rs
src/commands/: identity.rs  mod.rs  pocket.rs  secret.rs
src/domain/: dek.rs  identity.rs  keyring.rs  mod.rs  name.rs  pocket.rs  secret.rs  stanza.rs
src/session/: mod.rs  store.rs
