[package]
name = "m65-field-jacket"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Jonathan Boyett <j.e.boyett@gmail.com>"]
license = "MIT"
description = "Local-first secrets management for developers"

[[bin]]
name = "mfj"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
