[package]
name = "m65-field-jacket"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
authors = ["Jonathan Boyett <j.e.boyett@gmail.com>"]
license = "MIT"
description = "Local-first secrets management for developers"

[[bin]]
name = "mfj"
path = "src/main.rs"

[dependencies]
age = "0.11"
age-core = "0.11"
anyhow = "1"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10"
rpassword = "7"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
